  * Quiet a debug printing rspecs (#858)
  * In WiMAX, handle user swith no sn or givenName. Also fix a logic error
    causing projects to seem not WiMAX enabled. (#859)
  * Slice names are now unique only to the project, since ProtoGENI
  made a fix (#433)
  * Refer to scripts without the .py extension (#862)
  * Undefined index when generating a cert from a bad CSR (#870)

== 2.4 ==
  * Fix geni-revoke-member-privileges script (#716)
  * Quiet some logging in printing rspecs (#836)
  * Rearrange Profile tab (#812)
  * Remove debug log message in OpenID server (#828)
  * Remove "Manage RSpecs" button from profile tab and improve
    headers and links on RSpecs page(#810)
  * Clearing or extending project expiration now un-expires the
    project if applicable. (#841)
  * Fix revocation of operator privileges (#668)
  * Make slice member names be mailto links on slice page (#538)
  * Add project expiration time in the slice view (#838)
  * Added SSL tab to Profile page with the ability to generate or
    download your SSL certificate (#708)
  * Limit slice renew request to project expiration time (#839)
  * Remove account request pages (#837)
  * iRODS Support: Enable iRODS page for all users.
    Create an iRODS group for each new project. When
    adding/removing a project member, add/remove them from the iRODS
    group. When loading the iRODS page, ensure there is an iRODS group
    for each non-expired project. If the group gets created, all
    project members are added to the group. If the group existed and
    this user just got an iRODS account, add them. Note that this adds
    some delay in creating projects or adding/removing members from
    projects. (#829, #830, #831, #832)

== 2.3 ==
  * Remove note feature from projects and slices (#728)
  * Add LabWiki buttons (#825)
  * Add WiMAX OpenID support with new attribute
    http://geni.net/wimax/username (#809)
  * Clean up OpenID logging and sessions (#670)