@@ -11,6 +11,8 @@
   made a fix (#433)
   * Refer to scripts without the .py extension (#862)
   * Undefined index when generating a cert from a bad CSR (#870)
+  * Add language to discourage people from randomly trying to join
+    unknown projects, and to discourage leads from adding them. (#875)
 
 == 2.4 ==
   * Fix geni-revoke-member-privileges script (#716)
